--- a/Task/video3.html
+++ b/Task/video3.html
@@ -3,7 +3,7 @@
     <title>Videos</title>
 </head>
 <body>
-    <img src="./time to fall in love.jpg" height="400px" width="400px">
+    <img src="./Always.jpg" height="400px" width="400px">
     <details>
         <summary>
             Session1
