--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Task</title>
 </head>
 <body>
-    <a href="./Task/Bookmarking.html">Task1-bookmarking</a><br/>
-    <a href="./Task/audio&video.html">Task2-audios and videos</a><br/>
+    <a href=".//Task/Bookmarking.html">Task1-bookmarking</a><br/>
+    <a href=".//Task/audio&video.html">Task2-audios and videos</a><br/>
 </body>
